# browser

./: .gitignore  Cargo.toml  new.smf  t.wgsl  test.html  text.html  text.smf
browser/: Cargo.toml
browser/src/: args.rs  main.rs
neb_core/: Cargo.toml
neb_core/src/: defaults.rs  document.rs  dom_parser.rs  ids.rs  lib.rs  node.rs  rectr.rs  refs.rs  styling.rs  svg.rs  tree_display.rs
neb_errors/: Cargo.toml
neb_errors/src/: lib.rs
neb_graphics/: Cargo.toml
neb_graphics/src/: drawing_context.rs  lib.rs  simple_text.rs
neb_macros/: Cargo.toml
neb_macros/src/: lib.rs
neb_smf/: Cargo.toml
neb_smf/src/: ast.rs  error.rs  format.rs  lexer.rs  lib.rs  logger.rs  parser.rs  style_parser.rs  token.rs
neb_util/: Cargo.toml
neb_util/src/: format.rs  lib.rs  refs.rs
smf/: README.md  package.json
smf/client/src/: extension.ts
smf/rserver/: Cargo.toml
smf/rserver/src/: main.rs
smf/syntaxes/: smf.tmLanguage.json
test_files/: messages.smf  new.smf
