[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.0"
colored = "*"
env_logger = "*"
neb_core = { path = "../neb_core" }
neb_util = { path = "../neb_util" }
clap = { version = "*", features = ["derive"] }

pollster = "*"
rustyline = "10.1.1"
