[package]
name = "neb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "0.123.3"
xml-rs = "0.8.4"

neb_errors = { path = "../neb_errors" }
neb_graphics = { path = "../neb_graphics" }